--- a/index.html
+++ b/index.html
@@ -11,18 +11,132 @@
     />
   </head>
   <body>
-    <nav class="nav-bar">
-      <ul>
-        <li class="subscribe">
-          <input type="text" placeholder="Enter your email address" />
-          <a href="#">Subscribe</a>
-        </li>
-        <li class="nav-bar-title">Blog Title</li>
-        <li class="nav-bar-search">
-          <input type="text" placeholder="Search..." />
-          <i class="fa-solid fa-magnifying-glass"></i>
-        </li>
-      </ul>
-    </nav>
+    <section id="blog">
+      <nav class="nav-bar">
+        <ul>
+          <li class="subscribe">
+            <input type="text" placeholder="Enter your email address" />
+            <a href="#">Subscribe</a>
+          </li>
+          <li class="nav-bar-title">Our Blog</li>
+          <li class="nav-bar-search">
+            <input type="text" placeholder="Search..." />
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </li>
+        </ul>
+      </nav>
+      <article class="blog-container">
+        <article class="blog-item">
+          <div class="blog-img">
+            <img
+              src="/assets/images/logo/js_img.png"
+              class="img"
+              alt="img-js"
+            />
+          </div>
+          <div class="blog-description">
+            <span>
+              28 january 2024 / web design <br />
+              A blog sharing basic js for beginners
+            </span>
+
+            <p>
+              JavaScript is a programming language that adds interactivity to
+              your website. This happens in games, in the behavior of responses
+              when buttons are pressed or with data entry on forms; with dynamic
+              styling; with animation, etc. This article helps you get started
+              with JavaScript and furthers your understanding of what is
+              possible.
+            </p>
+            <a href="./post/post-blog-js.html" class="blog-title"
+              >Detail blog Js</a
+            >
+          </div>
+        </article>
+        <article class="blog-item">
+          <div class="blog-img">
+            <img
+              src="/assets/images/logo/html_img.png"
+              class="img"
+              alt="img-html"
+            />
+          </div>
+          <div class="blog-description">
+            <span>
+              28 january 2024 / web design <br />
+              A blog sharing basic HTML for beginners
+            </span>
+
+            <p>
+              JavaScript is a programming language that adds interactivity to
+              your website. This happens in games, in the behavior of responses
+              when buttons are pressed or with data entry on forms; with dynamic
+              styling; with animation, etc. This article helps you get started
+              with JavaScript and furthers your understanding of what is
+              possible.
+            </p>
+            <a href="./post/post-blog.html" class="blog-title"
+              >Detail blog Html</a
+            >
+          </div>
+        </article>
+        <article class="blog-item">
+          <div class="blog-img">
+            <img
+              src="/assets/images/logo/css_img.png"
+              class="img"
+              alt="img-css"
+            />
+          </div>
+          <div class="blog-description">
+            <span>
+              28 january 2024 / web design <br />
+              A blog sharing basic Css for beginners
+            </span>
+
+            <p>
+              JavaScript is a programming language that adds interactivity to
+              your website. This happens in games, in the behavior of responses
+              when buttons are pressed or with data entry on forms; with dynamic
+              styling; with animation, etc. This article helps you get started
+              with JavaScript and furthers your understanding of what is
+              possible.
+            </p>
+            <a href="./post/post-blog-css.html" class="blog-title"
+              >Detail blog Css</a
+            >
+          </div>
+        </article>
+      </article>
+      <footer class="footer">
+        <div class="container-footer">
+          <p>
+            Blog is optimized for learning and training. Examples might be
+            simplified to improve reading and learning.
+          </p>
+          <ul class="social-icons-footer">
+            <li>
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-github"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-google"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+          </ul>
+        </div>
+        <div class="cookie-box">
+          <p>
+            This website uses cookies to analyze our traffic and only share that
+            information with our analytics partners.
+          </p>
+          <button class="button-accept">I Accept</button>
+        </div>
+      </footer>
+    </section>
   </body>
 </html>
