update code post blog

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input type="text" placeholder="Enter your email address" />
             <a href="#">Subscribe</a>
           </li>
-          <li class="nav-bar-title">Our Blog</li>
+          <h1 class="nav-bar-title">Our Blog</h1>
           <li class="nav-bar-search">
             <input type="text" placeholder="Search..." />
             <i class="fa-solid fa-magnifying-glass"></i>
@@ -130,9 +130,8 @@
           </ul>
         </div>
         <div class="cookie-box">
-          <p>
-            This website uses cookies to analyze our traffic and only share that
-            information with our analytics partners.
+          <p class="description">
+            The website aims to share knowledge about basic web programming
           </p>
           <button class="button-accept">I Accept</button>
         </div>
