update fix review udacity

--- a/index.html
+++ b/index.html
@@ -28,83 +28,51 @@
       <article class="blog-container">
         <article class="blog-item">
           <div class="blog-img">
-            <img
-              src="/assets/images/logo/js_img.png"
-              class="img"
-              alt="img-js"
-            />
+            <img src="assets/images/logo/js_img.png" class="img" alt="img-js" />
           </div>
           <div class="blog-description">
-            <span>
-              28 january 2024 / web design <br />
-              A blog sharing basic js for beginners
-            </span>
-
+            <h2>Javascipt</h2>
             <p>
-              JavaScript is a programming language that adds interactivity to
-              your website. This happens in games, in the behavior of responses
-              when buttons are pressed or with data entry on forms; with dynamic
-              styling; with animation, etc. This article helps you get started
-              with JavaScript and furthers your understanding of what is
-              possible.
+              <strong>JavaScript is the Programming Language.</strong>
+              JavaScript can calculate, manipulate.
             </p>
-            <a href="./post/post-blog-js.html" class="blog-title"
-              >Detail blog Js</a
-            >
+            <a href="./post/post-blog-js.html" class="blog-title">Read more</a>
           </div>
         </article>
         <article class="blog-item">
           <div class="blog-img">
             <img
-              src="/assets/images/logo/html_img.png"
+              src="assets/images/logo/html_img.png"
               class="img"
               alt="img-html"
             />
           </div>
           <div class="blog-description">
-            <span>
-              28 january 2024 / web design <br />
-              A blog sharing basic HTML for beginners
-            </span>
+            <h2>HTML</h2>
 
             <p>
-              JavaScript is a programming language that adds interactivity to
-              your website. This happens in games, in the behavior of responses
-              when buttons are pressed or with data entry on forms; with dynamic
-              styling; with animation, etc. This article helps you get started
-              with JavaScript and furthers your understanding of what is
-              possible.
+              <strong>HyperText Markup Language.</strong>
+              <strong>HTML</strong> is the standard markup language.
             </p>
-            <a href="./post/post-blog.html" class="blog-title"
-              >Detail blog Html</a
-            >
+            <a href="./post/post-blog.html" class="blog-title">Read more</a>
           </div>
         </article>
         <article class="blog-item">
           <div class="blog-img">
             <img
-              src="/assets/images/logo/css_img.png"
+              src="assets/images/logo/css_img.png"
               class="img"
               alt="img-css"
             />
           </div>
           <div class="blog-description">
-            <span>
-              28 january 2024 / web design <br />
-              A blog sharing basic Css for beginners
-            </span>
+            <h2>CSS</h2>
 
             <p>
-              JavaScript is a programming language that adds interactivity to
-              your website. This happens in games, in the behavior of responses
-              when buttons are pressed or with data entry on forms; with dynamic
-              styling; with animation, etc. This article helps you get started
-              with JavaScript and furthers your understanding of what is
-              possible.
+              <strong>CSS Cascading Style Sheets.</strong>
+              HTML elements displayed on screen
             </p>
-            <a href="./post/post-blog-css.html" class="blog-title"
-              >Detail blog Css</a
-            >
+            <a href="./post/post-blog-css.html" class="blog-title">Read more</a>
           </div>
         </article>
       </article>
